src/test/ui/dep-graph/dep-graph-trait-impl.stderr
error: OK
  --> $DIR/dep-graph-trait-impl.rs:27:5
   |
LL |     #[rustc_then_this_would_need(TypeckTables)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:32:5
   |
LL |     #[rustc_then_this_would_need(TypeckTables)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:37:5
   |
LL |     #[rustc_then_this_would_need(TypeckTables)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: OK
  --> $DIR/dep-graph-trait-impl.rs:42:5
   |
LL |     #[rustc_then_this_would_need(TypeckTables)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `x::<impl Foo for char>` to `TypeckTables`
  --> $DIR/dep-graph-trait-impl.rs:55:5
   |
LL |     #[rustc_then_this_would_need(TypeckTables)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

